# technify-motions

./: .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/: classify.py  compose.py  extract.py  generate.py  main.py  models.py  render.py  transcribe.py
pipeline/remotion_render/: package-lock.json  package.json  tsconfig.json
pipeline/remotion_render/src/: BulletsSlide.tsx  CodeSlide.tsx  FlowchartAnimation.tsx  Root.tsx
prompts/: classify.txt  generate.txt  generate_graph.txt
